k8s/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: node-k8s
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: floriaaan/node_k8s_api:1.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - containerPort: 3000
