k8s/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: node-k8s
spec:
  selector:
    app: api
  ports:
    - name: "http"
      port: 3000
      targetPort: 3000
status:
  loadBalancer: {}
